; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/extr_xtensa.c_nvkm_xtensa_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/extr_xtensa.c_nvkm_xtensa_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_engine = type { i32 }
%struct.nvkm_xtensa = type { i32, i64, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvkm_engine*, i32)* @nvkm_xtensa_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvkm_xtensa_fini(%struct.nvkm_engine* %0, i32 %1) #0 {
  %3 = alloca %struct.nvkm_engine*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nvkm_xtensa*, align 8
  %6 = alloca %struct.nvkm_device*, align 8
  %7 = alloca i64, align 8
  store %struct.nvkm_engine* %0, %struct.nvkm_engine** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.nvkm_engine*, %struct.nvkm_engine** %3, align 8
  %9 = call %struct.nvkm_xtensa* @nvkm_xtensa(%struct.nvkm_engine* %8)
  store %struct.nvkm_xtensa* %9, %struct.nvkm_xtensa** %5, align 8
  %10 = load %struct.nvkm_xtensa*, %struct.nvkm_xtensa** %5, align 8
  %11 = getelementptr inbounds %struct.nvkm_xtensa, %struct.nvkm_xtensa* %10, i32 0, i32 2
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load %struct.nvkm_device*, %struct.nvkm_device** %13, align 8
  store %struct.nvkm_device* %14, %struct.nvkm_device** %6, align 8
  %15 = load %struct.nvkm_xtensa*, %struct.nvkm_xtensa** %5, align 8
  %16 = getelementptr inbounds %struct.nvkm_xtensa, %struct.nvkm_xtensa* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %7, align 8
  %18 = load %struct.nvkm_device*, %struct.nvkm_device** %6, align 8
  %19 = load i64, i64* %7, align 8
  %20 = add nsw i64 %19, 3460
  %21 = call i32 @nvkm_wr32(%struct.nvkm_device* %18, i64 %20, i32 0)
  %22 = load %struct.nvkm_device*, %struct.nvkm_device** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = add nsw i64 %23, 3476
  %25 = call i32 @nvkm_wr32(%struct.nvkm_device* %22, i64 %24, i32 0)
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %2
  %29 = load %struct.nvkm_xtensa*, %struct.nvkm_xtensa** %5, align 8
  %30 = getelementptr inbounds %struct.nvkm_xtensa, %struct.nvkm_xtensa* %29, i32 0, i32 0
  %31 = call i32 @nvkm_memory_unref(i32* %30)
  br label %32

32:                                               ; preds = %28, %2
  ret i32 0
}

declare dso_local %struct.nvkm_xtensa* @nvkm_xtensa(%struct.nvkm_engine*) #1

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i64, i32) #1

declare dso_local i32 @nvkm_memory_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
